--- a/config.json.example
+++ b/config.json.example
@@ -4,5 +4,9 @@
   "PRUNING": false,
   "LOCALE": "en",
   "STAY_TIME": 30,
-  "DEFAULT_VOLUME": 100
+  "DEFAULT_VOLUME": 100,
+  "SPOTIFY_CLIENT_ID": "",
+  "SPOTIFY_SECRET_ID": "",
+  "SPOTIFY_MARKET": "LK",
+  "SPOTIFY_REFRESH_TOKEN": ""
 }
